# CredForge

./: .coverage  .gitignore  README.md  TODO.md  combine-list-passwords.py  debug_detailed.py  debug_final_test.txt  debug_imports.py  debug_individual.py  debug_responder.py  debug_test_exact.py  final_2_tests.txt  final_debug.py  final_status.txt  final_test_output.txt  pyproject.toml  pytest.ini  remove_duplicates.py  requirements-dev.txt  responder_detailed.txt  responder_test_output.txt  run_tests.py  simple_test.py  test_output.txt  test_results.txt
credforge/: __init__.py  combine_list_passwords.py  password_analyzer.py  process_ntds.py  remove_duplicates.py  responder2hashcat.py  setup.py  split-credentials.py  split_credentials.py  test_imports.py
credforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: README.md  sample_hash_plaintext.txt  sample_ntds_dump.txt  sample_ntlm_responses.txt  sample_plaintext_list.txt  sample_user_hash_plaintext.txt  sample_with_duplicates.txt
tests/: __init__.py  conftest.py  test_combine_list_passwords.py  test_password_analyzer.py  test_process_ntds.py  test_remove_duplicates.py  test_responder2hashcat.py  test_split_credentials.py
